--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build": "tsc && tsc-alias",
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
     "@types/node": "24.10.0",
     "nodemon": "3.1.10",
     "ts-node": "10.9.2",
+    "tsc-alias": "1.8.16",
     "tsconfig-paths": "4.2.0",
     "typescript": "5.9.3"
   },
