--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "1.4.10",
     "@types/express": "5.0.5",
     "@types/jsonwebtoken": "9.0.10",
     "@types/node": "24.10.0",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "bcryptjs": "3.0.3",
+    "cookie-parser": "1.4.7",
     "express": "5.1.0",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.19.3",
