--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc && tsc-alias",
-    "start": "node ."
+    "start": "node .",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +15,13 @@
   "devDependencies": {
     "@types/cookie-parser": "1.4.10",
     "@types/express": "5.0.5",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "9.0.10",
     "@types/node": "24.10.0",
+    "jest": "30.2.0",
+    "jest-mock-extended": "^4.0.0",
     "nodemon": "3.1.10",
+    "ts-jest": "^29.4.5",
     "ts-node": "10.9.2",
     "tsc-alias": "1.8.16",
     "tsconfig-paths": "4.2.0",
